# python-coding-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: logging.md
notebooks/: dummy.ipynb  run_agent.ipynb
src/python_coding_agent/: agent.py  dummy.py  tools.py
